$Id$

v0.61.0		06-Jun-2004.

	mbmsg:
		With te post command, the right number of commandline options
		is checked, if this is wrong the help message is displayed.
		If a message is posted in a local area, no echomail.jam is
		updated and the mailout semafore is not set.
		Added checks in the mbmsg post command if the To parameter has
		the correct syntax for netmail and all other areas.


v0.60.0         09-Feb-2004 - 04-Jun-2004


        upgrade:
		Before upgrade announce all new files!
                Compile all programs.
                Close the system with mbstat close.
                Install programs as root (as usual).
                Start mbsetup, this can take a while on a system with lots of
                files, during startup the files database will be converted.
                After the menu appears, enter global setup, exit and save.
		This will also update the message area records and the message
		group permission.
                Now stop and restart mbtask.
                Open the system with mbstat open.
                In all message groups set check/set default character set.
                In all message areas set the character set to use with the
                global editor (to CP437 for example). Local and netmail
                areas must be done by hand because they are most likely not
                in a group.
                The macro templates are updated, you MUST install the newfiles
                macro template at least because the format changed!
                Type "make help" in the examples subdirectory to see how.


        general:
                Reorganized the library header files. This will make it easier
                to switch to dynamic libraries so other apps can link to mbse.
                Updated to a new files database structure that allows for
                expanding the records like most other databases to allow new
                features.